syntax = "proto3";

package repositories;

import "product_price_fees.proto";

option go_package = "prise/api/proto/stubs";

service FeeService {
  rpc GetFee(GetFeeRequest) returns (GetFeeResponse);
  rpc AddFee(FeeRequest) returns (FeeResponse);
  rpc RemoveFee(FeeRequest) returns (FeeResponse);
}

message GetFeeRequest {
  int32 productId = 1;
  proto.Currency buyerCurrency = 2;
}

message GetFeeResponse {
  proto.Fee fee = 1;
  string error = 2;
}

message FeeResponse {
  int64 result = 1;
  string error = 2;
}

message FeeRequest {
  int32 productId = 1;
  proto.Currency buyerCurrency = 2;
  proto.Fee fee = 3;
}